 * Optimised page URL generation by caching site paths in the request scope (Tobias McNulty, Matt Westcott)
 * The current live version of a page is now tracked on the revision listing view (Matheus Bratfisch)
 * Each block created in a `StreamField` is now assigned a globally unique identifier (Matt Westcott)
 * Mixcloud oEmbed pattern has been updated (Alice Rose)
 * Added ``last_published_at`` field to the Page model (Matt Westcott)
 * Fix: Unauthenticated AJAX requests to admin views now return 403 rather than redirecting to the login page (Karl Hobley)
 * Fix: `TableBlock` options `afterChange`, `afterCreateCol`, `afterCreateRow`, `afterRemoveCol`, `afterRemoveRow` and `contextMenu` can now be overridden (Loic Teixeira)
 * Fix: The lastmod field returned by wagtailsitemaps now shows the last published date rather than the date of the last draft edit (Matt Westcott)
 * Fix: Document chooser upload form no longer renders container elements for hidden fields (Jeffrey Chau)


1.10.1 (19.05.2017)
~~~~~~~~~~~~~~~~~~~

 * Fix: Fix admin page preview that was broken 24 hours after previewing a page (Martin Hill)
 * Fix: Removed territory-specific translations for Spanish, Polish, Swedish, Russian and Chinese (Taiwan) that block more complete translations from being used (Matt Westcott)


1.10 (03.05.2017)
~~~~~~~~~~~~~~~~~

 * Added PostgreSQL search engine (Bertrand Bordage, Jaap Roes, Arne de Laat, Ramon de Jezus)
 * Django 1.11 support (Tim Graham, Matt Westcott, Mikalai Radchuk, Bertrand Bordage)
 * Dropped Django 1.9 and Python 3.3 support; note that Django 1.8.x is still supported
 * Added user-preferred admin language along with `WAGTAILADMIN_PERMITTED_LANGUAGES` (Daniel Chimeno)
 * Added `WAGTAIL_AUTO_UPDATE_PREVIEW` setting that when set to `True`, allows the preview window to be refreshed when changes have been made in the editor (Bertrand Bordage)
 * Dropped support for generating static sites using django-medusa